# pyrdf4j

./: README.md  pyproject.toml
RDF4J_configuration/: security_constraints.xml  tomcat-users.xml  web.xml
datenadler_rdf4j/: api.py  constants.py  errors.py
doc/: web.xml
pyrdf4j/: api_base.py  api_graph.py  api_repo.py  constants.py  errors.py  rdf4j.py  rdf4j_rest.py  repo_types.py  server.py  sparql.py
pyrdf4j/repo_type_templates/: memory-customrule.ttl  memory-lucene.ttl  memory-rdfs-dt.ttl  memory-rdfs-legacy.ttl  memory-rdfs-lucene.ttl  memory-rdfs.ttl  memory-shacl.ttl  memory-spin-rdfs-lucene.ttl  memory-spin-rdfs.ttl  memory-spin.ttl  memory.ttl  native-customrule.ttl  native-lucene.ttl  native-rdfs-dt.ttl  native-rdfs-lucene.ttl  native-rdfs.ttl  native-shacl.ttl  native-spin-rdfs-lucene.ttl  native-spin-rdfs.ttl  native-spin.ttl  native.ttl  remote.ttl  sparql.ttl
tests/: constants.py  test_RDF_loading.py  test_auth.py  test_datenadler_rdf4j.py  test_empty_repo.py  test_not_working_uri.py  test_repo_types.py  test_repository_ops.py  test_sparql.py
