[tool.poetry]
name = "pyrdf4j"
version = "0.1.0"
description = ""
authors = ["volker <volker.jaenisch@inqbus.de>"]

[tool.poetry.dependencies]
python = "^3.7"
SPARQLWrapper = "^1.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^5.5"
pycodestyle = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
